# aphelion3d

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Aphelion3DConfig.cmake.in
docs/: Doxyfile.in
python/: pyproject.toml  test_feature_codes.py
python/cdb/: cli.py  datasets.py  init.py  metadata.py  obj_converter.py  obj_to_flt.py  options.json  paths.py  raster_tiler.py  tiling.py  vector_tiler.py
python/cdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/cdb/writers/: elevation.py  init.py  models.py  vector.py
src/app/hello/: CMakeLists.txt  main.cpp
src/app/mesher/: CMakeLists.txt  main.cpp
src/app/viewer/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/: 3dtiler.h  algorithms.h  mesh.h  output_writer.h  utilities.h
src/core/src/: 3dtiler.cpp  algorithms.cpp  mesh.cpp  output_writer.cpp  utilities.cpp
src/libmath/: CMakeLists.txt
src/libmath/include/math/: math.hpp
src/libmath/src/: math.cpp
src/libutil/: CMakeLists.txt
src/libutil/include/util/: strings.hpp
tests/: CMakeLists.txt  math_tests.cpp
tests/data/: test_buildings_2D.dbf  test_buildings_2D.shp  test_buildings_2D.shx  test_buildings_2D_circle.dbf  test_buildings_2D_circle.qmd  test_buildings_2D_circle.shp  test_buildings_2D_circle.shx  test_buildings_2D_small.dbf  test_buildings_2D_small.shp  test_buildings_2D_small.shx
tests/data/tests_output/3dtiles/: index.html  index_.html  tileset.json  tileset_large.json
tests/data/tests_output/3dtiles/tiles/: tile_0.b3dm
tests/data/tests_output/3dtiles/tiles_old/: 0.b3dm  1.b3dm  10.b3dm  100.b3dm  101.b3dm  102.b3dm  103.b3dm  104.b3dm  105.b3dm  106.b3dm  107.b3dm  108.b3dm  109.b3dm  11.b3dm  110.b3dm  111.b3dm  112.b3dm  113.b3dm  114.b3dm  115.b3dm  116.b3dm  117.b3dm  118.b3dm  119.b3dm  12.b3dm  120.b3dm  121.b3dm  122.b3dm  123.b3dm  124.b3dm  125.b3dm  126.b3dm  127.b3dm  128.b3dm  129.b3dm  13.b3dm  130.b3dm  131.b3dm  132.b3dm  133.b3dm  (+468 more)
