[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdb"
version = "0.1.0"
description = "CDB (OGC) writer utilities for Luxcarta"
authors = [{ name = "Willard Mapurisa" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
    "rasterio>=1.3",
    "geopandas>=0.12",
    "shapely>=2.0",
    "fiona>=1.9",
    "pillow>=9.0",
]

[project.scripts]
cdb = "cdb.cli:main"